# RamenGL

./: .gitignore  CMakeLists.txt
assets/shaders/: computeshader.comp  computeshader.frag  computeshader.vert  envmap.frag  envmap.vert  flat.frag  flat.vert  floor.frag  floor.vert  lightSource.frag  lightSource.vert  pcf_floor.frag  phong.frag  phong.vert  shadowmap.frag  shadowmap.vert  task03.frag  task03.vert  task05.frag  task05.vert  textures.frag  textures.vert
dependencies/: tiny_obj_loader.h
dependencies/tinyobjloader/: CMakeLists.txt
ramen/: rgl_image.cpp  rgl_image.h  rgl_math.cpp  rgl_math.h  rgl_model.h  rgl_shader.cpp  rgl_shader.h
tasks/: task03.md  task04.md  task05.md  task06.md  task08.md  task09.md
tasks_src/: CMakeLists.txt
tasks_src/task02/: CMakeLists.txt  docu_task02.typ  task02.cpp
tasks_src/task02/docu/: docu_task02.typ
tasks_src/task03/: CMakeLists.txt  docu_task03.typ  matrixStack.h  renderdoc.rdc  task03.cpp
tasks_src/task03/docu/: docu_task03.typ
tasks_src/task04/: CMakeLists.txt  docu_task04.typ  task04.cpp
tasks_src/task04/docu/: docu_task04.typ
tasks_src/task05/: CMakeLists.txt  docu_task05.typ  task05.cpp
tasks_src/task05/docu/: docu_task05.typ
tasks_src/task06/: CMakeLists.txt  task06.cpp
tasks_src/task06/docu/: docu_task06.typ
tasks_src/task07/: CMakeLists.txt  docu_task07.typ  task07.cpp
tasks_src/task07/docu/: docu_task07.typ
tasks_src/task08/: CMakeLists.txt  task08.cpp
tasks_src/task08/docu/: docu_task08.typ
tasks_src/task09/: CMakeLists.txt  task09.cpp
tasks_src/task09/docu/: docu_task09.typ
(+6 files in other folders)
